--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,133 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+/* form {
+    list-style: none;
+    text-align: center;
+    margin-bottom: 1.25rem;
+    margin-top: 0.75rem;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.allin {
+    border: 2px solid gray;
+    border-radius: 15px;
 }
 
-* {
-  box-sizing: border-box;
+.inp {
+    text-align: center;
+}
+ */
+
+.outside {
+    background-color: #eee;
+    border-radius: 10px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.padding_top {
+    padding-top: 3rem;
+}
+
+.padding_bottom {
+    padding-bottom: 3rem;
+}
+
+.padding_side {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+.row {
+    display: flex;
+}
+
+.justify_content_center {
+    justify-content: center;
+}
+
+.list_tab {
+    padding: 1.75rem 2.5rem 2.5rem 2.5rem;
+    border: 0;
+    box-shadow: 0px 2.5px 10px 5px rgb(0 0 0 / 15%);
+    background-color: white;
+    border-radius: 0.7rem;
+}
+
+.list_title {
+    text-align: center;
+    padding: 0.75rem;
+}
+
+#checkButton{
+    cursor: pointer;
+}
+
+.activated+span {
+    text-decoration: line-through;
+    color: gray;
+}
+
+.inputbox_wrap {
+    margin: auto;
+    width: 50%;
+}
+
+.todo_inputbox, .edit_inputbox {
+    min-height: auto;
+    padding: 0.45em 0.75em;
+}
+
+.input_button {
+    background-color: rgb(110 220 110 / 20%);
+}
+
+.edit_button {
+    background-color: rgb(110 220 110 / 60%);
+}
+
+.list_buttons {
+    padding: 0.25rem 0.75rem 0.25rem 0.75rem;
+    max-height: fit-content;
+    border: 1px solid gray;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.inputbox_buttons {
+    padding: 0.5rem 1rem 0.5rem 1rem!important;
+    width: 10em;
+    height: fit-content;
+    white-space: nowrap;
+    cursor:pointer;
+    border: 1px solid gray;
+    border-radius: 5px;
+}
+/* .todoButtons:hover {} */
+
+.edit_text {
+    display: flex;
+    flex-direction: row;
+    gap: 1px;
+}
+
+.list_content {
+    display:flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.list_button_wrap{
+    display:block;
+    float:right;
+}
+
+.list_wrap {
+    padding: 15px 15px 7.5px 15px;
+    width: 35rem;
+    border-bottom: 1.5px solid gray;
+}
+
+.remove_button {
+    background-color: rgb(255 50 30 / 40%);
+}
+
+.time_wrap {
+    display: flex;
+    gap: 2rem;
 }
